add category module and connect it with product
