# Modules/Product/app/Http/Resources/V1/ProductResource.php
@@ -4,6 +4,7 @@ namespace Modules\Product\Http\Resources\V1;
 
 use Illuminate\Http\Request;
 use Illuminate\Http\Resources\Json\JsonResource;
+use Modules\Category\Http\Resources\V1\CategoryResource;
 
 /**
  * @OA\Schema(
@@ -17,6 +18,13 @@ use Illuminate\Http\Resources\Json\JsonResource;
  *         @OA\Property(property="name", type="string", example="laptop"),
  *         @OA\Property(property="description", type="string", example="A high-quality laptop", nullable=true),
  *         @OA\Property(property="price", type="integer", example=1500000),
+ *         @OA\Property(
+ *             property="categories",
+ *             type="array",
+ *             description="Array of category IDs associated with the product",
+ *             example={1, 2, 3},
+ *             @OA\Items(ref="#/components/schemas/CategoryResponse"),
+ *         ),
  *         @OA\Property(property="created_at", type="string", format="date-time", example="2025-10-20 14:30:00"),
  *         @OA\Property(property="updated_at", type="string", format="date-time", example="2025-10-20 14:30:00")
  *     )
@@ -39,6 +47,7 @@ class ProductResource extends JsonResource
          'description' => $this->description,
          'price' => $this->price,
          // 'price_formatted' => number_format($this->price) . 'toman',
+         'categories' => CategoryResource::collection($this->whenLoaded('categories')),
          'created_at' => $this->created_at->format('Y-m-d H:i:s'),
          'updated_at' => $this->updated_at->format('Y-m-d H:i:s'),
       ];
