# Modules/Product/app/Models/Product.php
@@ -4,17 +4,13 @@ namespace Modules\Product\Models;
 
 use Illuminate\Database\Eloquent\Model;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Relations\BelongsToMany;
 use Modules\Product\Database\Factories\ProductFactory;
-
+use Modules\Category\Models\Category;
 
 class Product extends Model
 {
    use HasFactory;
-
-   protected static function newFactory(): ProductFactory
-   {
-      return ProductFactory::new();
-   }
 
    /**
     * The attributes that are mass assignable.
@@ -24,4 +20,14 @@ class Product extends Model
       'description',
       'price',
    ];
+
+   public function categories(): BelongsToMany
+   {
+      return $this->belongsToMany(Category::class, 'category_product');
+   }
+
+   protected static function newFactory(): ProductFactory
+   {
+      return ProductFactory::new();
+   }
 }
