# storage/api-docs/api-docs.json
@@ -420,6 +420,21 @@
     },
     "components": {
         "schemas": {
+            "CategoryResponse": {
+                "title": "Category Response",
+                "properties": {
+                    "id": {
+                        "description": "Transform the resource into an array.",
+                        "type": "integer",
+                        "example": 1
+                    },
+                    "name": {
+                        "type": "string",
+                        "example": "Electronic"
+                    }
+                },
+                "type": "object"
+            },
             "ProductRequest": {
                 "title": "Product Request Body",
                 "description": "Schema for creating or editing a product",
@@ -434,12 +449,24 @@
                     },
                     "description": {
                         "type": "string",
-                        "example": "description",
+                        "example": "A high-quality laptop with advanced features",
                         "nullable": true
                     },
                     "price": {
                         "type": "integer",
-                        "example": 500000
+                        "example": 1500000
+                    },
+                    "category_ids": {
+                        "description": "Array of category IDs to associate with the product",
+                        "type": "array",
+                        "items": {
+                            "type": "integer"
+                        },
+                        "example": [
+                            1,
+                            2,
+                            3
+                        ]
                     }
                 },
                 "type": "object"
@@ -464,6 +491,18 @@
                     "price": {
                         "type": "integer",
                         "example": 1500000
+                    },
+                    "category_ids": {
+                        "description": "Array of category IDs to associate with the product",
+                        "type": "array",
+                        "items": {
+                            "type": "integer"
+                        },
+                        "example": [
+                            1,
+                            2,
+                            3
+                        ]
                     }
                 },
                 "type": "object"
@@ -484,6 +523,18 @@
                     "price": {
                         "type": "integer",
                         "example": 1400000
+                    },
+                    "category_ids": {
+                        "description": "Array of category IDs to associate with the product",
+                        "type": "array",
+                        "items": {
+                            "type": "integer"
+                        },
+                        "example": [
+                            1,
+                            2,
+                            3
+                        ]
                     }
                 },
                 "type": "object"
@@ -510,6 +561,18 @@
                             "price": {
                                 "type": "integer",
                                 "example": 1500000
+                            },
+                            "categories": {
+                                "description": "Array of category IDs associated with the product",
+                                "type": "array",
+                                "items": {
+                                    "$ref": "#/components/schemas/CategoryResponse"
+                                },
+                                "example": [
+                                    1,
+                                    2,
+                                    3
+                                ]
                             },
                             "created_at": {
                                 "type": "string",
